--- a/index.html
+++ b/index.html
@@ -1,140 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ana Sayfa</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!--Navbar Alanı-->
 
-    <nav class="navbar">
-      <h1 class="navbar-logo">Adventure</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EXPLORE</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-      <ul class="navbar-links">
-        <li><a href="#" class="active">Ana Sayfa</a></li>
-        <li><a href="./tours.html">Turlar</a></li>
-        <li><a href="">Keşfet</a></li>
-        <li><a href="">Hakkında</a></li>
-        <li><a href="" class="btn">İletişim</a></li>
-      </ul>
+<body>
+  <!--NAVBAR BAŞLANGIÇ-->
 
-      <img src="./img/menu-btn.png" alt="" class="navbar-menu-btn" />
-    </nav>
+  <nav class="navbar">
+    <h1 class="navbar-logo">Adventure</h1>
 
-    <!--Navbar Alanı Bitiş-->
+    <ul class="navbar-links">
+      <li><a href="#" class="active">Ana Sayfa</a></li>
+      <li><a href="./tours.html">Turlar</a></li>
+      <li><a href="">Keşfet</a></li>
+      <li><a href="">Hakkında</a></li>
+      <li><a href="" class="btn">İletişim</a></li>
+    </ul>
 
-    <!--Header Alanı -->
-    <header class="header">
-      <div class="header-content">
-        <h2>Renkli Dünyaları Keşfet</h2>
-        <div class="line"></div>
-        <h1>Muzzam Bir Hediye</h1>
-        <a href="" class="btn">Learn More</a>
-      </div>
-    </header>
+    <img src="./img/menu-btn.png" alt="" class="navbar-menu-btn" />
+  </nav>
 
-    <!--Header Alanı Bitiş-->
+  <!--NAVBAR BİTİŞ-->
 
-    <!--Etkinlikler Alanı-->
+  <!--HEADER START -->
+  <header class="header">
+    <div class="header-content">
+      <h2>Renkli Dünyaları Keşfet</h2>
+      <div class="line"></div>
+      <h1>Muzzam Bir Hediye</h1>
+      <a href="" class="btn">Learn More</a>
+    </div>
+  </header>
 
-    <section class="events">
-      <div class="events-title">
-        <h1>Yaklaşan Etkinlikler</h1>
-        <div class="line"></div>
-      </div>
+  <!--HEADER END-->
 
-      <div class="events-row">
-        <div class="events-row-col">
-          <img src="./img/img1.png" alt="" />
-          <h4>Everest Camp</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga
-            debitis voluptates mollitia? Id nam nulla dicta omnis esse sequi
-            dolor.
-          </p>
-          <a href="" class="btn">Daha Fazla</a>
-        </div>
+  <!--ETKİNLİKLER START-->
 
-        <div class="events-row-col">
-          <img src="./img/img2.png" alt="" />
-          <h4>Tatil Yürüyüşü</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga
-            debitis voluptates mollitia? Id nam nulla dicta omnis esse sequi
-            dolor.
-          </p>
-          <a href="" class="btn">Daha Fazla</a>
-        </div>
-      </div>
-    </section>
+  <section class="events">
+    <div class="events-title">
+      <h1>Yaklaşan Etkinlikler</h1>
+      <div class="line"></div>
+    </div>
 
-    <!--Etkinlikler alanı bitiş-->
-
-    <!--Keşfet Alanı Başlangıç-->
-
-    <section class="explore">
-      <div class="explore-content">
-        <h1>Dünyayı Keşfet</h1>
-        <div class="line"></div>
+    <div class="events-row">
+      <div class="events-row-col">
+        <img src="./img/img1.png" alt="" />
+        <h4>Everest Camp</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non tempore
-          expedita iusto architecto animi mollitia sint assumenda nam veritatis!
-          Nam?
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga
+          debitis voluptates mollitia? Id nam nulla dicta omnis esse sequi
+          dolor.
         </p>
         <a href="" class="btn">Daha Fazla</a>
       </div>
-    </section>
 
-    <!--Keşfet Alanı Bitiş-->
+      <div class="events-row-col">
+        <img src="./img/img2.png" alt="" />
+        <h4>Tatil Yürüyüşü</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga
+          debitis voluptates mollitia? Id nam nulla dicta omnis esse sequi
+          dolor.
+        </p>
+        <a href="" class="btn">Daha Fazla</a>
+      </div>
+    </div>
+  </section>
 
-    <!--Turlar Alanı Başlangıç-->
+  <!--ETKİNLİKLER END-->
 
-<div class="tours">
+  <!--KEŞFET START-->
+
+  <section class="explore">
+    <div class="explore-content">
+      <h1>Dünyayı Keşfet</h1>
+      <div class="line"></div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non tempore
+        expedita iusto architecto animi mollitia sint assumenda nam veritatis!
+        Nam?
+      </p>
+      <a href="" class="btn">Daha Fazla</a>
+    </div>
+  </section>
+
+  <!--KEŞFET END-->
+
+  <!--TURLAR START-->
+
+  <div class="tours">
     <div class="tours-left">
 
-        <h1>Yaklaşan Turlar</h1>
-        <div class="line"></div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius provident assumenda officiis alias quaerat tenetur sed nam earum culpa?</p>
-        <a href="" class="btn">Daha Fazla</a>
+      <h1>Yaklaşan Turlar</h1>
+      <div class="line"></div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius provident assumenda officiis alias quaerat
+        tenetur sed nam earum culpa?</p>
+      <a href="" class="btn">Daha Fazla</a>
     </div>
 
 
     <div class="tours-right">
-<div class="image-gallery">
-    <img src="./img/img3.png">
-    <img src="./img/img4.png">
-    <img src="./img/img5.png">
-    <img src="./img/img5.png">
-</div>
+      <div class="image-gallery">
+        <img src="./img/img3.png">
+        <img src="./img/img4.png">
+        <img src="./img/img5.png">
+        <img src="./img/img5.png">
+      </div>
     </div>
-</div>
+  </div>
+
+  <!--TURLAR END-->
+
+
+  <!--FOOTER-->
+
+  <section class="footer">
+    <p>123 Fifth Avenue, NY 10160,New York,USA | Phone : 555-555-555 | Email: contact@example.com
+
+    </p>
+    <p>Copyright 2020 Outdoor Adventure</p>
+
+  </section>
 
 
 
 
-    <!--Turlar Alanı Bitiş-->
-
-
-    <!--Footer Alanı Başlangıç-->
-
-    <section class="footer">
-        <p>123 Fifth Avenue, NY 10160,New York,USA | Phone : 555-555-555 | Email: contact@example.com
-
-        </p> 
-<p>Copyright 2020 Outdoor Adventure</p>
-
-    </section>
 
 
 
+  <!--Script-->
 
+  <script src="./main.js"></script>
+</body>
 
-     <!--Footer Alanı Bitiş-->
-
-     <!--Script JS-->
-
-     <script src="./main.js"></script>
-  </body>
 </html>
